# ecommerce-analytics-platform

./: .env.example  .gitignore  Project Architecture .pages  Project Architecture.pages  README.md  To run the full stack.pages  pyproject.toml  requirements-dev.txt  requirements.txt  test_snowflake_connection.py
.github/workflows/: ci.yml  dbt_deploy.yml
angular-dashboard/: README.md  angular.json  package-lock.json  package.json
angular-dashboard/src/: index.html  styles.scss
angular-dashboard/src/app/: app.component.ts  app.routes.ts
angular-dashboard/src/app/core/models/: ecommerce.models.ts
angular-dashboard/src/app/core/services/: api.service.ts  data.service.ts
angular-dashboard/src/environments/: environment.prod.ts
api/: config.py  database.py  main.py  requirements.txt
api/routers/: dashboard.py
data/: explore_data.py
dbt/ecommerce_dw/: dbt_project.yml
dbt/ecommerce_dw/macros/: generate_schema_name.sql
dbt/ecommerce_dw/models/: sources.yml
dbt/ecommerce_dw/models/marts/: _marts_models.yml  dim_customers.sql  dim_products.sql  dim_sellers.sql  fct_orders.sql
dbt/ecommerce_dw/models/staging/: _stg_models.yml  stg_customers.sql  stg_geolocation.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql  stg_products.sql  stg_sellers.sql
scripts/: deploy_prod.sh
snowflake/setup/: 01_create_databases.sql
src/ecommerce_analytics/data_loader/: load_to_snowflake.py
src/ecommerce_analytics/snowflake/: connector.py
tests/: conftest.py  test_connector.py  test_data_loader.py
(+9 files in other folders)
